{
    "name": "GridBuildingControls",
    "maps": [
        {
            "name": "GridBuilding",
            "id": "9a7b6c6e-a3df-44e2-acbc-b0359e730ade",
            "actions": [
                {
                    "name": "Demolish",
                    "type": "Button",
                    "id": "a53dfc1b-5666-4bcb-b6e3-ae22d472d0f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Build",
                    "type": "Button",
                    "id": "cc16ec99-d2e8-4c2b-8b66-b0f46336412d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "26a930d9-d14f-459f-866c-363605b2cf32",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleBuildMenu",
                    "type": "Button",
                    "id": "528686b1-2033-4f69-ab76-8dca4ddaa921",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey1",
                    "type": "Button",
                    "id": "b2d0d12f-5905-4d4f-8508-772051b48309",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey2",
                    "type": "Button",
                    "id": "7e49a84d-056f-46b3-bc4d-efe8d81a72b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey3",
                    "type": "Button",
                    "id": "e422b14a-3a08-43f2-adc1-97391ab56ff5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey4",
                    "type": "Button",
                    "id": "c85726d9-242d-4b81-8cfe-661a8ca72d5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey5",
                    "type": "Button",
                    "id": "bb626773-0c4b-4abc-a96c-543de242d0b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey6",
                    "type": "Button",
                    "id": "8401924b-dbde-4f27-827c-384173228a9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey7",
                    "type": "Button",
                    "id": "06a1c043-d74c-430f-8b97-a541a5080717",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey8",
                    "type": "Button",
                    "id": "af7283f5-8d2e-4c76-8f63-4d5a1768c25c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey9",
                    "type": "Button",
                    "id": "ad50456a-d553-44a6-8048-e6cde90cb7cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3e964024-1f68-4d47-aabe-620c747f4a6c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Demolish",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b7217eb-d294-42df-aa80-3269680b1fb7",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3644e18d-7d3f-4ec4-9278-5a90c95e8cb5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "ToggleBuildMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01346685-958d-4a6c-a2c3-bbd04c77ae33",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Build",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed1b30ad-9213-4afb-9e9d-fffa84ec0202",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a617fda4-a958-4d03-a1c3-25193bf64db5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1eb5750e-f8d1-4da9-a36c-3fd4d7e275f1",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5dd8a2d-04f6-43db-bbcd-e4eefd705db5",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae82a32d-4565-41d8-8f49-cb9fc3f05e55",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fb3416c-5d70-46fb-889a-1a7e7e77f783",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed3fb6de-a12b-4917-a1bf-a5d9c58641ba",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f001d3f-1320-429d-9f73-5243aedff6a7",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89bd1be5-bea9-4e9d-b6f2-532f48b0cedc",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "NumberKey9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse + Keyboard",
            "bindingGroup": "Mouse + Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}